<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmsc355wideo.wideo.MainActivity">


    <TextView
        android:id="@+id/my_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_group_name"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />


    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/button"
        android:background="@drawable/camerabutton"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:text="@string/gallery"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/sharebutton"
        android:text="@string/share"
        android:layout_above="@+id/button6"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:text="@string/friend_list"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:text="@string/map"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:text="@string/settings"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:text="@string/quit"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/delete"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDelete"
        android:layout_below="@+id/button6"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5" />


</RelativeLayout>
